@@ -289,11 +289,11 @@ matrix(0,2)
   *** polrootsmod: zero polynomial in rootmod.
   ***   at top-level: factormod(x,0)
   ***                 ^--------------
-  *** factormod: not a prime number in factormod: 0.
+  *** factormod: incorrect type in factormod (t_INT).
   ***   at top-level: factormod(x^3+1,[y^2+1,2])
   ***                 ^--------------------------
   *** factormod: not an irreducible polynomial in FpX_ffintersect: y^2 + 1.
   ***   at top-level: factormod(x^3+1,[y^2+1,5])
   ***                 ^--------------------------
   *** factormod: not an irreducible polynomial in FpX_ffintersect: y^2 + 1.
-Total time spent: 81
+Total time spent: 52
